Migrate to microservices - Testes for approximation service